# vulkanTutorial

./: .clang-format  .gitattributes  CMakeLists.txt  README.md  compileShader.bat
DrawingTriangle/: CMakeLists.txt  main.cpp
lib/glfw/lib-vc2013/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
lib/glfw/lib-vc2015/: glfw3_mt.lib
lib/glfw/lib-vc2017/: glfw3.lib  glfw3_mt.lib  glfw3dll.lib
lib/glfw/lib-vc2019/: glfw3.lib  glfw3_mt.lib
lib/vulkan-sdk/: InstallationLog.txt  components.xml  maintenancetool.ini
lib/vulkan-sdk/Lib/: GenericCodeGen.lib  MachineIndependent.lib  OSDependent.lib  SPIRV-Tools-diff.lib  SPIRV-Tools-link.lib  SPIRV-Tools-lint.lib  SPIRV-Tools-opt.lib  SPIRV-Tools-reduce.lib  SPIRV-Tools.lib  SPIRV.lib  SPVRemapper.lib  glslang-default-resource-limits.lib  glslang.lib  shaderc.lib  shaderc_combined.lib  shaderc_shared.lib  shaderc_util.lib  spirv-cross-c.lib  spirv-cross-core.lib  spirv-cross-cpp.lib  spirv-cross-glsl.lib  spirv-cross-hlsl.lib  spirv-cross-msl.lib  spirv-cross-reflect.lib  spirv-cross-util.lib
shaders/: shader.frag  shader.vert
